--- a/sage_latex_template_3/Bins.tex
+++ b/sage_latex_template_3/Bins.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{May 17, 2017}
+  \date{May 18, 2017}
 
 
 \begin{document}
@@ -289,6 +289,8 @@ CHG Adherence &\tabularnewline
 \bottomrule
 \end{longtable}
 
+\begin{center}\includegraphics{Bins_files/figure-latex/IntroGraph-1} \end{center}
+
 Prior to randomization, investigators spent time using a web application
 built using the \texttt{Shiny} package in \texttt{R}. The purpose of
 this is to determine which weights give advantageous balance across
@@ -297,9 +299,6 @@ relevant baseline variables.
 \subsection{Discussion}\label{discussion}
 
 Look how smart we are.
-
-Use of color to make it clear where the closer to 0 ones are. Click on
-axis.
 
 \subsection{Appendix}\label{appendix}
 
