--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -1,3 +1,14 @@
+@article{huang2013targeted,
+  title={Targeted versus universal decolonization to prevent ICU infection},
+  author={Huang, Susan S and Septimus, Edward and Kleinman, Ken and Moody, Julia and Hickok, Jason and Avery, Taliser R and Lankiewicz, Julie and Gombosev, Adrijana and Terpstra, Leah and Hartford, Fallon and others},
+  journal={New England Journal of Medicine},
+  volume={368},
+  number={24},
+  pages={2255--2265},
+  year={2013},
+  publisher={Mass Medical Soc}
+}
+
 @article{greevy2004optimal,
   title={Optimal multivariate matching before randomization},
   author={Greevy, Robert and Lu, Bo and Silber, Jeffrey H and Rosenbaum, Paul},
@@ -69,6 +80,12 @@
   pages={329--338},
   year={1993},
   publisher={Wiley Online Library}
+}
+
+
+@online{3Bears, 
+  url     = {https://en.wikipedia.org/wiki/Goldilocks_and_the_Three_Bears}, 
+  urldate = {2017-05-18}, 
 }
 
 
